[gd_scene load_steps=3 format=3 uid="uid://cys7ch7mynqxl"]

[ext_resource type="Script" path="res://Assets/Scene/TerrainSelector/TerrainSelector.gd" id="1_7fmgl"]
[ext_resource type="Texture2D" uid="uid://2oi8hh5bstwx" path="res://icon.svg" id="2_pdkjo"]

[node name="TerrainSelector" type="Node"]
script = ExtResource("1_7fmgl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_pdkjo")
expand_mode = 1
stretch_mode = 5

[node name="LabelHeader" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "123123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonConfirm" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "@str::confirmation"
clip_text = true

[node name="ButtonCancel" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "@str::cancel"
clip_text = true

[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/ButtonConfirm" to="." method="_on_button_confirm_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/ButtonCancel" to="." method="_on_button_cancel_pressed"]
